@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 7e6d8d1035caf2ce657bcaf9bd7b8978eba31dfa ChangeLog
+SHA1 d00f4d854bd939b22662ac90461ea2dd215999ac ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 48f104904ae6a792c41f2434912a229f724fe703 META.yml
-SHA1 d16108ae2f5bb07c16de8e4477353287261569b7 Makefile.PL
+SHA1 ba77bf98e2a78920fa7b8c192740a8b00c8df641 META.yml
+SHA1 1b203684ff0a2d183ef2e79744b32053baf7411e Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 79b2327b9429c8e88af77382ccd3d9771155da33 lib/Net/FullAuto.pm
+SHA1 28fc5335cd23cb0e4d0323d7a349833476755472 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 15b442ad7e268218b9156d48bba27c6d84ebcb57 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 c460bd0c3da074d14ca448b0ace7b574ba4e4190 lib/Net/FullAuto/FA_Core.pm
+SHA1 6f84d74020ee884ca2b4089738b39baa48366a09 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUfOfNAAoJEBa/9Pad787EOWoH/0FARSZLmw3cW2Cc5fcR9XZ4
-i8iA/jRx/qa7ckYVJ0RLfDjLIZbCnlJyilYniBr9FzaJDgagM7aCFL+vS9J5Rn/V
-udsPflAADLVWii3WfUT2q2+7RWE9wysXZLMaCRxhDEEDS10p5tM2DHAwPdcyWxQn
-1B6lasR/6oryCPALqJnpcovLWDpzCvFGwo0bJ20IysmUj7qe9O7IaiEZDLqxIgJp
-LMXXYPVUUMkCcEkA6qNCTGZeo7nnGJBJvHewHe+963KUHzooRxskwe5II0SnCYrB
-PVnGVOdFbT01Acx6h4vEStBmk49Z2rQxok606oD+DJ/43BA0GegNtvrUgJgZLGE=
-=VFbc
+iQEcBAEBAgAGBQJUgONJAAoJEBa/9Pad787EXyQIAJRn4OwTjU4eH86Wual/fY1s
+375ccOa7YYYThsbR2Oji6ZrGHM9IvEyfbMdejmbJyDN0Lf1JFqgnfphghxDSDfNH
+TNFBJzc+VAwtrcJURaJn/f4q9XjjnlvefrFZx2gDFhk15W9dS3aTvEUTLBSxS0D4
+0/qnP/JHSG/pOC3qJ3D96VES9SsfdHuX00ld4J/yf5nntz+9R9ICa928Ll+xdRxW
+EWxRXTwkYzXhsLRn8QmGF4E45DnyqwRCqEjiI2Az41ZJkM8dchNMC9t9oP7HDUVb
+dnwhbrVKHDSEgaswxCjdStmJM9DY+FW4lT0rYmfnEFK2PE/69bkRjhY+5mNEx4E=
+=m+Ir
 -----END PGP SIGNATURE-----
