@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999942';
+our $VERSION='0.999999999943';
 
 
 use 5.005;
